k8s/base/namespace-and-secrets.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: yopago
